Created a juicy homepage

--- a/index.html
+++ b/index.html
@@ -6,30 +6,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>My page</title>
 </head>
 <body>
+    
 
 <div class="container py-5">
     <div class="row">
-        <div class="col-6">
+        <div class="">
         <h1>I married my uncle...is that normal?</h1>
         </div>
     </div>
 
     <div class="row">
-        <div class="col">
-          <p>Here is some text...</p>
+        <div class="col-md-3">
+            <p>Here is some text about something...</p>
         </div>
-        <div class="col">
-            <p>Here is some text...</p>
+        <div class="col-md-3">
+           <p>Here is some text about something...</p>
         </div>
-        <div class="col">
-           <p>Here is some text...</p>
-        </div>
-         <div class="col">
-            <p>Here is some text...</p>
+         <div class="col-md-6">
+            <p>Here is some text about something...</p>
          </div>
+         <video autoplay muted loop>
+            <source src="video/medusa.mp4" type="video/mp4">
+         </video>
     </div>
 </div>
     
